# repo-tools

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run.py
docs/: CLIENT_SIDE_FILE_HANDLING.md  serverside-migration.md
src/repo_tools/: __init__.py  cli.py  menu.py  test_xml_parser.py  webui_cli.py
src/repo_tools/modules/: __init__.py  context_copier.py  github_context_copier.py  xml_parser.py
src/repo_tools/utils/: __init__.py  clipboard.py  git.py  notifications.py
src/repo_tools/webui/: __init__.py  routes.py
src/repo_tools/webui/static/css/: style.css
src/repo_tools/webui/templates/: 404.html  500.html  base.html  github_repo.html  index.html  local_repo.html  settings.html  xml_parser.html
