[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-tools"
version = "0.1.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "Git repository workflow enhancement tools"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "inquirer>=2.10.0",
    "pathspec>=0.11.0",
    "pyperclip>=1.8.2",
    "rich>=13.0.0",
]

[project.scripts]
repo-tools = "repo_tools.cli:main"
repo-web = "repo_tools.webui_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}